feat: :sparkles: added user transaction listing
